--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li class="navigation-item"><a href="#about-me">About Me</a></li>
           <li class="navigation-item"><a href="#projects">Projects</a></li>
           <li class="navigation-item"><a href="#skills">Skills</a></li>
-          <li class="navigation-item"><a href="/contact.html">Contact</a></li>
+          <li class="navigation-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -57,7 +57,7 @@
           <summary class="project-title">
             <h3>Help-I</h3>
         </summary>
-            <img src="/media/images/helpi.jpg" alt="help-i preview" class="project-image"/>
+            <img src="./media/images/helpi.jpg" alt="help-i preview" class="project-image"/>
             <p class="project-description">
               A web app developed for new gamers to find an experimented coach
               that help's them improve their skills.
@@ -69,7 +69,7 @@
             <h3>Squirrel's Box</h3>
         </summary>
             <img
-              src="/media/images/squirrels.jpg"
+              src="./media/images/squirrels.jpg"
               alt="squirrel's box preview" class="project-image"
             />
             <p class="project-description">
@@ -81,7 +81,7 @@
           <summary class="project-title">
             <h3>Poke Swap</h3>
         </summary>
-            <img src="/media/images/poke.jpg" alt="poke swap preview"  class="project-image"/>
+            <img src="./media/images/poke.jpg" alt="poke swap preview"  class="project-image"/>
             <p class="project-description">
               A web app based on the descentralized exchanges that admits to you
               to practice the crypto trading.
