--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@
 
         <div class="skills-container">
           <i id="fb" class="fa-brands fa-facebook">
-            <a href="https://www.facebook.com/erick.uriartedelgado/" target="_blank"><img src="/media/images/fb.jpg" alt="fb" id="img1"/></a>
+            <a href="https://www.facebook.com/erick.uriartedelgado/" target="_blank"><img src="./media/images/fb.jpg" alt="fb" id="img1"/></a>
           </i>
           <i id="ig" class="fa-brands fa-instagram">
-            <a href="https://www.instagram.com/24erick/" target="_blank"><img src="/media/images/ig.jpg" alt="ig" id="img2"/></a>
+            <a href="https://www.instagram.com/24erick/" target="_blank"><img src="./media/images/ig.jpg" alt="ig" id="img2"/></a>
           </i>
           <i id="git" class="fa-brands fa-github">
-            <a href="https://github.com/iKNZR" target="_blank"><img src="/media/images/ghib.jpg" alt="git" id="img3"/></a>
+            <a href="https://github.com/iKNZR" target="_blank"><img src="./media/images/ghib.jpg" alt="git" id="img3"/></a>
           </i>
         </div>
       </section>
