--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Fun fact about me is that I love to make jokes to my friends.</p>
           </div>
           <div class="about-me-image-container">
-            <img src="/media/images/erick.jpg" alt="Erick" class="portrait" />
+            <img src="./media/images/erick.jpg" alt="Erick" class="portrait" />
           </div>
         </div>
       </section>
