--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
       <h1 id="logo">EU</h1>
       <nav>
         <ul class="navigation-items">
-          <li class="navigation-item"><a href="/#about-me">About Me</a></li>
-          <li class="navigation-item"><a href="/#projects">Projects</a></li>
-          <li class="navigation-item"><a href="/#skills">Skills</a></li>
+          <li class="navigation-item"><a href="/portfoliobeta/#about-me">About Me</a></li>
+          <li class="navigation-item"><a href="/portfoliobeta/#projects">Projects</a></li>
+          <li class="navigation-item"><a href="/portfoliobeta/#skills">Skills</a></li>
           <script
             src="https://kit.fontawesome.com/653775b008.js"
             crossorigin="anonymous"
