--- a/index.html
+++ b/index.html
@@ -28,22 +28,16 @@
           <div class="about-me-text-container">
             <h2>About Me</h2>
             <p>
-              Hello, I'm Erick, a Software Engineering student at the Peruvian
-              University of Applied Sciences (UPC) currently studying the ninth
-              cycle and also studying Full Stack Engineering at Codecademy.
+              Hello My name is Erick, and I'm a Software Engineering student at the Peruvian University of Applied Sciences (UPC). I'm currently in my 9th cycle of studies and also taking a course in Full Stack Engineering at Codecademy.
             </p>
             <p>
-              I also have skills in frontend development of mobile applications
-              with basic knowledge of Kotlin and intermediate knowledge of
-              Flutter.
+              As a Software Engineering student, I have gained expertise in front-end development, with a focus on mobile applications. I am proficient in Kotlin and have intermediate knowledge of Flutter. Additionally, I have completed a Full Stack Engineering course through Codecademy.
             </p>
             <p>
-              I am also a qualified athlete with skills in Muay Thai,
-              Kickboxing, Wushu Sanda, Calisthenics and Functional Training
-              which I practice every day because I am a true believer in the
-              refrain "A healthy mind in a healthy body".
+              In my free time, I enjoy practicing various martial arts like Muay Thai, Kickboxing, Wushu Sanda and functional training. These activities not only allow me to maintain a healthy mind and body, but they also help me develop discipline, focus, and problem-solving skills that I can apply to my work as a software engineer.
             </p>
-            <p>Fun fact about me is that I love to make jokes to my friends.</p>
+            <p>Lastly, I'm a big fan of humor and love to tell jokes to my friends.</p>
+            <p>Thank you for your time. I look forward to any questions you may have.</p>
           </div>
           <div class="about-me-image-container">
             <img src="./media/images/erick.jpg" alt="Erick" class="portrait" />
